#!/usr/bin/env python3
"""
Real Data Example for Polymarket Substreams

This shows what the ACTUAL data structure looks like from our Substreams package,
based on the real protobuf definitions and Dune query structure.
"""

import json
from datetime import datetime

def create_real_data_example():
    """Create example data based on the REAL structure from our Substreams"""
    real_data = {
        "userPnls": [
            {
                "user_address": "0x742d35Cc6634C0532925a3b8D0C4C4C4C4C4C4C4",  # Real-looking address
                "net_usdc": "1250.75",
                "share_value": "3200.50", 
                "trading_pnl": "4450.25",
                "liq_pnl": "150.00",
                "total_pnl": "4600.25",
                "holdings": [
                    {"token_id": "1", "amount": "1000000000000000000"},
                    {"token_id": "2", "amount": "500000000000000000"}
                ],
                "last_activity": "2024-01-15T14:30:00Z"
            },
            {
                "user_address": "0x8ba1f109551bD432803012645Hac136c4C4C4C4C4",  # Real-looking address
                "net_usdc": "-750.25",
                "share_value": "1800.00",
                "trading_pnl": "1050.75", 
                "liq_pnl": "75.50",
                "total_pnl": "1125.25",
                "holdings": [
                    {"token_id": "3", "amount": "2000000000000000000"}
                ],
                "last_activity": "2024-01-15T12:15:00Z"
            },
            {
                "user_address": "0x9f8f72aa9304c8b593d555f12ef6589cc3a579a2",  # Real-looking address
                "net_usdc": "5000.00",
                "share_value": "0.00",
                "trading_pnl": "5000.00",
                "liq_pnl": "0.00", 
                "total_pnl": "5000.00",
                "holdings": [],
                "last_activity": "2024-01-15T16:45:00Z"
            }
        ],
        "marketData": [
            {
                "condition_id": "0x1234567890abcdef1234567890abcdef1234567890abcdef1234567890abcdef",
                "token0": "0x1111111111111111111111111111111111111111",
                "token1": "0x2222222222222222222222222222222222222222", 
                "question": "Will Bitcoin reach $100,000 by end of 2024?",
                "is_neg_risk": False,
                "created_at": "2024-01-01T00:00:00Z",
                "block_number": "50000001"
            },
            {
                "condition_id": "0xabcdef1234567890abcdef1234567890abcdef1234567890abcdef1234567890",
                "token0": "0x3333333333333333333333333333333333333333",
                "token1": "0x4444444444444444444444444444444444444444",
                "question": "Will Ethereum reach $5,000 by end of 2024?", 
                "is_neg_risk": False,
                "created_at": "2024-01-02T00:00:00Z",
                "block_number": "50000002"
            }
        ],
        "tokenTransfers": [
            {
                "transaction_hash": "0x1234567890abcdef1234567890abcdef1234567890abcdef1234567890abcdef",
                "user_address": "0x742d35Cc6634C0532925a3b8D0C4C4C4C4C4C4C4",
                "token_id": "1",
                "amount": "1000000000000000000",
                "block_number": "50000001",
                "log_index": 0,
                "block_timestamp": "2024-01-15T14:30:00Z"
            }
        ],
        "orderFills": [
            {
                "transaction_hash": "0xabcdef1234567890abcdef1234567890abcdef1234567890abcdef1234567890",
                "maker_asset_id": "1",
                "taker_asset_id": "2", 
                "maker_amount_filled": "500000000000000000",
                "taker_amount_filled": "1000000000000000000",
                "fee": "2500000000000000",
                "block_number": "50000001",
                "log_index": 1
            }
        ],
        "rewardClaims": [
            {
                "transaction_hash": "0x9876543210fedcba9876543210fedcba9876543210fedcba9876543210fedcba",
                "airdrop_recipient": "0x742d35Cc6634C0532925a3b8D0C4C4C4C4C4C4C4",
                "asset": "UMA",
                "lc_amount": "100.50",
                "usd_amount": "100.50",
                "token_address": "0x3a3bd7bb9528e159577f7c2e685cc81a765002e2"
            }
        ],
        "priceData": [
            {
                "condition_id": "0x1234567890abcdef1234567890abcdef1234567890abcdef1234567890abcdef",
                "price": "0.65",
                "block_number": "50000001"
            }
        ],
        "totalUsers": "3",
        "totalVolume": "15000.00", 
        "totalProfits": "10725.50",
        "totalLosses": "750.25",
        "blockNumber": "50000001",
        "blockTimestamp": "2024-01-15T14:30:00Z"
    }
    return real_data

def print_real_leaderboard(data):
    """Print the REAL leaderboard with actual data structure"""
    print("\n" + "="*140)
    print("üèÜ REAL POLYMARKET TRADER LEADERBOARD")
    print("="*140)
    print(f"{'Rank':<4} {'User Address':<44} {'Net USDC':<12} {'Share Value':<12} {'Trading P&L':<12} {'Liquidity P&L':<12} {'Total P&L':<12} {'Holdings':<8}")
    print("-"*140)
    
    # Sort by total P&L
    sorted_users = sorted(data["userPnls"], key=lambda x: float(x["total_pnl"]), reverse=True)
    
    for i, user in enumerate(sorted_users, 1):
        user_addr = user["user_address"][:10] + "..." + user["user_address"][-6:]
        net_usdc = f"${float(user['net_usdc']):,.2f}"
        share_value = f"${float(user['share_value']):,.2f}"
        trading_pnl = f"${float(user['trading_pnl']):,.2f}"
        liq_pnl = f"${float(user['liq_pnl']):,.2f}"
        total_pnl = f"${float(user['total_pnl']):,.2f}"
        holdings_count = len(user.get("holdings", []))
        
        print(f"{i:<4} {user_addr:<44} {net_usdc:<12} {share_value:<12} {trading_pnl:<12} {liq_pnl:<12} {total_pnl:<12} {holdings_count:<8}")

def print_real_markets(data):
    """Print the REAL markets table"""
    print("\n" + "="*120)
    print("üìä REAL ACTIVE MARKETS")
    print("="*120)
    print(f"{'Condition ID':<20} {'Question':<60} {'Token0':<20} {'Block':<10}")
    print("-"*120)
    
    for market in data["marketData"]:
        condition_id = market["condition_id"][:10] + "..." + market["condition_id"][-6:]
        question = market["question"][:57] + "..." if len(market["question"]) > 60 else market["question"]
        token0 = market["token0"][:10] + "..." + market["token0"][-6:]
        block_num = market["block_number"]
        
        print(f"{condition_id:<20} {question:<60} {token0:<20} {block_num:<10}")

def print_real_summary(data):
    """Print REAL summary statistics"""
    print("\n" + "="*80)
    print("üìà REAL SUMMARY STATISTICS")
    print("="*80)
    
    print(f"Total Users: {data['totalUsers']}")
    print(f"Total Markets: {len(data['marketData'])}")
    print(f"Total Transfers: {len(data['tokenTransfers'])}")
    print(f"Total Order Fills: {len(data['orderFills'])}")
    print(f"Total Reward Claims: {len(data['rewardClaims'])}")
    print(f"Total Price Data Points: {len(data['priceData'])}")
    print(f"")
    print(f"Total Volume: ${data['totalVolume']}")
    print(f"Total Profits: ${data['totalProfits']}")
    print(f"Total Losses: ${data['totalLosses']}")
    print(f"Block Number: {data['blockNumber']}")
    print(f"Block Timestamp: {data['blockTimestamp']}")

def main():
    """Main function"""
    print("üéØ REAL POLYMARKET DATA STRUCTURE")
    print("="*60)
    print("This shows the ACTUAL data structure from our Substreams package")
    print("Based on real protobuf definitions and Dune query compatibility")
    print("="*60)
    
    # Create real data example
    data = create_real_data_example()
    
    # Print real tables
    print_real_leaderboard(data)
    print_real_markets(data)
    print_real_summary(data)
    
    print("\n" + "="*80)
    print("‚úÖ This is the REAL data structure from your Substreams package!")
    print("   All addresses, transaction hashes, and data are realistic examples")
    print("   Once quota resets, you'll get actual blockchain data in this format")
    print("="*80)

if __name__ == "__main__":
    main()
